<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="38dp"
    android:layout_marginRight="38dp"
    android:background="?attr/fo_menu_bg_color"
    android:minWidth="1000dp"
    android:orientation="vertical"
    tools:background="@color/fo_light_menu_bg_color">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:textColor="?attr/fo_text_1_color"
        android:textSize="@dimen/text_size_5"
        android:textStyle="bold"
        tools:text="@string/fo_follow_order_stop"
        tools:textColor="@color/fo_light_text_1_color" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="3dp"
        android:textColor="?attr/fo_nickname_color"
        android:textSize="@dimen/text_size_3"
        tools:text="@string/fo_order_dialog_stop_content"
        tools:textColor="@color/fo_light_nickname_color" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_1"
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="right"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/fo_action_cancel"
            android:textColor="@color/fo_dark_nickname_color"
            android:textSize="@dimen/text_size_4"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:minWidth="60dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/fo_action_read"
            android:textColor="@color/fo_blue"
            android:textSize="@dimen/text_size_4"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>