<?xml version="1.0" encoding="utf-8"?>
<com.follow.order.ui.view.PersonalAssetsView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/fo_menu_bg_color"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:background="@color/fo_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43.5dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.follow.order.widget.shape.RoundTextView
            android:layout_width="7dp"
            android:layout_height="7dp"
            app:rv_backgroundColor="@color/fo_blue"
            app:rv_cornerRadius="3.5dp"
            app:rv_isRadiusHalfHeight="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/fo_personal_account_summary"
            android:textColor="?attr/fo_nickname_color"
            android:textSize="@dimen/text_size_5"
            android:textStyle="bold"
            tools:textColor="@color/fo_light_text_1_color" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/fo_list_line_color"
        tools:background="@color/fo_light_line_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="41dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_1"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_4"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.5dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="$32623.45"
                tools:textColor="@color/fo_light_text_1_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_2"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_4"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_profit_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.5dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="823.82%"
                tools:textColor="@color/fo_green" />

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="41dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_3"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_2"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="@dimen/text_size_5"
                tools:text="$2343.98"
                tools:textColor="@color/fo_red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_4"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_2"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_victory_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="@dimen/text_size_5"
                tools:text="123.55%"
                tools:textColor="@color/fo_light_text_1_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.8"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_5"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_2"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_live_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="@dimen/text_size_5"
                tools:text="173天"
                tools:textColor="@color/fo_light_text_1_color" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="14dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_6"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_2"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_week_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="@dimen/text_size_5"
                tools:text="$3442.32"
                tools:textColor="@color/fo_light_text_1_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_7"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_2"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_week_ratio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="@dimen/text_size_5"
                tools:text="134.33%"
                tools:textColor="@color/fo_light_text_1_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="0.8"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_label_8"
                android:textColor="?attr/fo_personal_subtitle_color"
                android:textSize="@dimen/text_size_2"
                tools:textColor="@color/fo_desc_color" />

            <TextView
                android:id="@+id/tv_trading_frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:singleLine="true"
                android:text="**"
                android:textColor="?attr/fo_text_1_color"
                android:textSize="@dimen/text_size_5"
                tools:text="96次/周"
                tools:textColor="@color/fo_light_text_1_color" />

        </LinearLayout>


    </LinearLayout>


</com.follow.order.ui.view.PersonalAssetsView>